--- a/MSGMM.ipynb
+++ b/MSGMM.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ae609e",
+   "id": "fb2eedcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,115 @@
       " [-0.07687933  0.92764679  0.77655159  1.80542656]]\n",
       "\n",
       "0.3965565685634311 0.9925731163573764 [1.60607487 1.61098548] [-1.10499323 -1.07994779]\n",
+      "\n",
+      "[[ 0.9524978  -0.03197892  1.04644594  0.03736558]\n",
+      " [-0.03197892  0.97623354  0.03736558  1.06026509]]\n",
+      "\n",
+      "0.48816210217265515 0.9988699107933563 [1.51637615 1.52486074] [-1.47615014 -1.45225466]\n",
+      "\n",
+      "[[ 0.97547836 -0.00838375  0.99259052 -0.01577393]\n",
+      " [-0.00838375  1.00145947 -0.01577393  1.00727304]]\n",
+      "\n",
+      "0.49905705580071336 0.9999522502220572 [1.49521377 1.50333178] [-1.51299538 -1.48824653]\n",
+      "\n",
+      "[[ 0.97688053 -0.00690175  0.9902862  -0.01800079]\n",
+      " [-0.00690175  1.00303991 -0.01800079  1.00513716]]\n",
+      "\n",
+      "0.4996037661134897 0.9999986524728353 [1.494061   1.50213443] [-1.51472612 -1.48989647]\n",
+      "\n",
+      "[[ 0.97694561 -0.00683352  0.99018145 -0.01810311]\n",
+      " [-0.00683352  1.0031113  -0.01810311  1.00503911]]\n",
+      "\n",
+      "0.4996290409593063 0.9999999631704714 [1.49400781 1.50207963] [-1.51480529 -1.48997254]\n",
+      "\n",
+      "[[ 0.97694853 -0.00683047  0.99017676 -0.01810772]\n",
+      " [-0.00683047  1.00311444 -0.01810772  1.00503467]]\n",
+      "\n",
+      "0.4996301789020976 0.9999999989951659 [1.49400542 1.50207719] [-1.51480884 -1.48997597]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683034  0.99017655 -0.01810793]\n",
+      " [-0.00683034  1.00311458 -0.01810793  1.00503448]]\n",
+      "\n",
+      "0.4996302293909159 0.999999999972587 [1.49400531 1.50207708] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302316115612 0.9999999999992522 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.49963023170871285 0.9999999999999797 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317129492 0.9999999999999996 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.49963023171313353 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131415 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131418 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
+      "\n",
+      "[[ 0.97694866 -0.00683033  0.99017655 -0.01810794]\n",
+      " [-0.00683033  1.00311459 -0.01810794  1.00503447]]\n",
+      "\n",
+      "0.4996302317131419 1.0 [1.49400531 1.50207707] [-1.514809   -1.48997613]\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-404ef241688b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmsgmm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxPos\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0miterations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-38-d5bfaa2e65b1>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, xUnlabeled, xPos, verbose, iterations)\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateU0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxPos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateSigma1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxPos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateSigma0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxPos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m             \u001b[0;31m# E-Step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;31m# Update unlabeled responsibilities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-38-d5bfaa2e65b1>\u001b[0m in \u001b[0;36mupdateSigma0\u001b[0;34m(self, xUnlabeled, xPos)\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0ms11\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mxUnlabeled\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0ms22\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxPos\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxPos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m         \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms11\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiU\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0ms11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m         \u001b[0ms2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms22\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0ms22\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msigma0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiU\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -209,7 +317,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc5c4306f40>"
+       "<matplotlib.collections.PathCollection at 0x7fc5c42238b0>"
       ]
      },
      "execution_count": null,
