remove mnist viz from aae notebook

--- a/AAE.ipynb
+++ b/AAE.ipynb
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50cd31a3",
+   "id": "d666fa08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d38e2808",
+   "id": "5a51c360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de62e182",
+   "id": "f5c7fa18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be992c00",
+   "id": "73487a3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc494c5f",
+   "id": "7976e5f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "735c4bd6",
+   "id": "fa226a12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda9285c",
+   "id": "c6bb5cb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6867f5d",
+   "id": "e3f4022e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c62e5d",
+   "id": "13f8e18d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b20d151c",
+   "id": "887466ff",
    "metadata": {},
    "outputs": [
     {
@@ -2066,54 +2066,31 @@
       "[[0.06977897 0.18782269]]\n",
       "\n",
       "0.46065084609370116 0.9166511410181665 [-0.56218022] [0.71102432]\n",
+      "\n",
+      "[[0.07183915 0.1821404 ]]\n",
+      "\n",
+      "0.4661813446573148 0.9208787859006187 [-0.55720264] [0.71988646]\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-132-993813ff50b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maae\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeledTrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxPosTrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeledVal\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxPosVal\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1024\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-130-d0b9f5f96a61>\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, xUnlabeled, xPos, validation_data, n_epochs, batch_size)\u001b[0m\n\u001b[1;32m    222\u001b[0m                           \u001b[0mepoch_dc_acc_avg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m                           epoch_gen_loss_avg.result()))\n\u001b[0;32m--> 224\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateMeans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    225\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-130-d0b9f5f96a61>\u001b[0m in \u001b[0;36mupdateMeans\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    136\u001b[0m         \u001b[0membeddingsP\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxPos\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtraining\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMSGMM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 138\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membeddingsU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membeddingsP\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0miterations\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    139\u001b[0m         self.m = np.concatenate((self.em.u0,\n\u001b[1;32m    140\u001b[0m                                  self.em.u1))\n",
+      "\u001b[0;32m~/latentPosteriorEstimation/latentPosteriorEstimation/msgmm.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, xUnlabeled, xPos, verbose, iterations)\u001b[0m\n\u001b[1;32m     48\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateU0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxPos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateSigma1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxPos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateSigma0\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxPos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m             \u001b[0;31m# E-Step\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m             \u001b[0;31m# Update unlabeled responsibilities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/latentPosteriorEstimation/latentPosteriorEstimation/msgmm.py\u001b[0m in \u001b[0;36mupdateSigma0\u001b[0;34m(self, xUnlabeled, xPos)\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0ms11\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mxUnlabeled\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mxUnlabeled\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0ms22\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxPos\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrepeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu0\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxPos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m         \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms11\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiU\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0ms11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m         \u001b[0ms2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms22\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mravel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0ms22\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msigma0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiU\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwiL\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "aae.fit(xUnlabeledTrain,xPosTrain,validation_data=(xUnlabeledVal,xPosVal),batch_size=1024)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cf01d74b",
-   "metadata": {},
-   "source": [
-    "# Reconstructions for Mnist"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "feb51b7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "images = [d.numpy().reshape((28,28)) for d in decodings]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a4e3a9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from mpl_toolkits.axes_grid1 import ImageGrid\n",
-    "\n",
-    "\n",
-    "fig = plt.figure(figsize=(12., 12.),)\n",
-    "grid = ImageGrid(fig, 111,  # similar to subplot(111)\n",
-    "                 nrows_ncols=(4, 4),  # creates 2x2 grid of axes\n",
-    "                 axes_pad=0.25,  # pad between axes in inch.\n",
-    "                 )\n",
-    "\n",
-    "for ax, im,yi in zip(grid, images[:16],y_test):\n",
-    "    # Iterating over the grid returns the Axes.\n",
-    "    ax.imshow(im)\n",
-    "    ax.set_title(yi)\n",
-    "\n",
-    "plt.show()"
    ]
   },
   {
